--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "Jake Liefschultz",
     "license": "MIT",
     "dependencies": {
+        "discord.js": "^14.7.1",
         "express": "^4.18.2",
         "express-handlebars": "^6.0.6",
         "mysql": "^2.18.1"
