--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "license": "MIT",
     "dependencies": {
         "discord.js": "^14.7.1",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-handlebars": "^6.0.6",
-        "mysql": "^2.18.1"
+        "mysql": "^2.18.1",
+        "webp-converter": "^2.3.3"
     }
 }
