--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "author": "Jake Liefschultz",
     "license": "MIT",
     "dependencies": {
+        "axios": "^1.2.2",
         "discord.js": "^14.7.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-handlebars": "^6.0.6",
+        "fs-extra": "^11.1.0",
         "mysql": "^2.18.1",
+        "request": "^2.88.2",
+        "sharp": "^0.31.3",
+        "tmp": "^0.2.1",
         "webp-converter": "^2.3.3"
     }
 }
