--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "nodemon server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "Jake Liefschultz",
+    "author": "Jake Schultz",
     "license": "MIT",
     "dependencies": {
         "axios": "^1.2.2",
