--- a/.env-template
+++ b/.env-template
@@ -1,6 +1,9 @@
-TOKEN=""
+TOKEN="MTA2Njg0NTcwNzY2OTA3ODEzNQ.GVI700.ot3q7VrikJ9JCPhPXxWn9FE_2ZFBO3KGD4D0XQ"
 
-channelURL=
+channelURL=https://discord.com/channels/1063538236900782220/1066844089498214473
+
+testEMAIL=pyhelptester@gmail.com
+testPASSWORD=PassTest1!
 
 dlEMAIL=
 dlPASSWORD=
